// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-expand-btn Renders \`c-expand-btn\` correctly. 1`] = `
<button
  class="ma-0 v-btn v-btn--icon v-btn--small theme--light"
  type="button"
>
  <div
    class="v-btn__content"
  >
    <i
      aria-hidden="true"
      class="v-icon material-icons theme--light"
    >
      keyboard_arrow_down
    </i>
  </div>
</button>
`;

exports[`c-expand-btn Renders \`c-expand-btn\` expanded correctly. 1`] = `
<button
  class="ma-0 v-btn v-btn--icon v-btn--small theme--light"
  type="button"
>
  <div
    class="v-btn__content"
  >
    <i
      aria-hidden="true"
      class="v-icon material-icons theme--light"
    >
      keyboard_arrow_up
    </i>
  </div>
</button>
`;

exports[`c-expand-btn Renders \`c-expand-btn\` with custom color correctly. 1`] = `
<button
  class="ma-0 v-btn v-btn--icon v-btn--small theme--light"
  type="button"
>
  <div
    class="v-btn__content"
  >
    <i
      aria-hidden="true"
      class="v-icon material-icons theme--light custom-color--text"
    >
      keyboard_arrow_down
    </i>
  </div>
</button>
`;
